--- a/www/about.html
+++ b/www/about.html
@@ -60,12 +60,11 @@
 <p>I moved to Appleton, WI in 2019, and where I have been functioning thanks to 300-600ml of good coffee every day.</p>
 
 <p>You can find me on:
-<a href="https://mastodon.social/@thrls" rel="me nofollow">
-Mastodon
-</a>, <a href="https://github.com/thr-ls/" rel="me nofollow">Github</a> or send an email to <a href="mailto:">hi @ thrls . com</a>.</p>
+<a href="https://mastodon.social/@thrls">Mastodon</a>,
+<a href="https://gitea.thrls.net/">Gitea</a> or send an email to <a href="mailto:">hi @ thrls . com</a>.</p>
 
 <p><small>This site was built using my <a href="https://github.com/mirovarga/litepub">fork</a> of <a href="https://github.com/mirovarga/litepub">litepub</a> <strong>+</strong>
-gitea actions for automatic deploys.</small></p>
+gitea actions.</small></p>
 
     </div>
   </div>
