edit about (find me) links

--- a/www/about.html
+++ b/www/about.html
@@ -61,10 +61,9 @@
 
 <p>You can find me on:
 <a href="https://mastodon.social/@thrls">Mastodon</a>,
-<a href="https://gitea.thrls.net/thr-ls">Gitea</a> or send an email to <a href="mailto:">hi @ thrls . com</a>.</p>
+<a href="https://github.com/thr-ls">Github</a> or send an email to <a href="mailto:">hi @ thrls . com</a>.</p>
 
-<p><small>This site was built using my <a href="https://github.com/mirovarga/litepub">fork</a> of <a href="https://github.com/mirovarga/litepub">litepub</a> <strong>+</strong>
-gitea actions.</small></p>
+<p><small>This site was built using <a href="https://github.com/mirovarga/litepub">litepub</a>.</small></p>
 
     </div>
   </div>
