add projects page

--- a/www/about.html
+++ b/www/about.html
@@ -31,6 +31,9 @@
               Thr-ls
             </a>
             <small class="u-pull-right">
+              <a href="/projects.html" title="Bookmards" class="img">
+                projects
+              </a>&nbsp;
 
               <a href="/bookmarks.html" title="Bookmards" class="img">
                 bookmarks
